ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ggiv__GGOExchangeInfo__c/ggiv__GGOExchangeInfo__c.object-meta.xml
<CustomObject>
    <description>Records which GGO projects are used for exchange and their last exchange dates.</description>
    <label>GGO Exchange Info</label>
    <nameField>
        <label>GGO Exchange Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GGO Exchange Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>