ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ggiv__GGOExchangeInfo__c/fields/ggiv__GGO_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>ggiv__GGO_Organization_Name__c</fullName>
    <label>GGO Organization Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>