ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ggiv__GGOExchangeInfo__c/fields/ggiv__GGO_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>ggiv__GGO_Project_Id__c</fullName>
    <label>GGO Project Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>