ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ggiv__GGOExchangeInfo__c/fields/ggiv__LastPullDate__c.field-meta.xml
<CustomField>
    <fullName>ggiv__LastPullDate__c</fullName>
    <label>LastPullDate</label>
    <type>DateTime</type>
</CustomField>