ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ggiv__GGOExchangeInfo__c/fields/ggiv__LastPullTimestamp__c.field-meta.xml
<CustomField>
    <fullName>ggiv__LastPullTimestamp__c</fullName>
    <label>LastPullTimestamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>