ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ggiv__GGOExchangeInfo__c/fields/ggiv__LastSendDateAccounts__c.field-meta.xml
<CustomField>
    <fullName>ggiv__LastSendDateAccounts__c</fullName>
    <label>LastSendDateAccounts</label>
    <type>DateTime</type>
</CustomField>