ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ggiv__GGOExchangeInfo__c/fields/ggiv__LastUsedDate__c.field-meta.xml
<CustomField>
    <fullName>ggiv__LastUsedDate__c</fullName>
    <label>LastUsedDate</label>
    <type>DateTime</type>
</CustomField>